Fixed scrollbar in contact-list mobile

--- a/src/app/features/contacts/pages/contacts-page/contacts-page.scss
+++ b/src/app/features/contacts/pages/contacts-page/contacts-page.scss
@@ -98,6 +98,7 @@
     border-right: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     flex: 1;
+    min-height: 0;
   }
 
   .contacts-page-detail {
